fixes #1137 - mobile view: message index topic titles caused broken layout. Signed-off-by:Thorsten Eurich <thorsten@eurich.de>

--- a/themes/default/css/index.css
+++ b/themes/default/css/index.css
@@ -4295,6 +4295,7 @@ a.help .icon {
 	}
 	.board_info h3 a {
 		font-size: 1.3em;
+		word-wrap: break-word;
 	}
 	.board_latest {
 		padding: 0 8px;
